--- a/docker-lab/Vagrantfile
+++ b/docker-lab/Vagrantfile
@@ -2,8 +2,13 @@
 Vagrant.configure("2") do |config|
 
   config.vm.box = "centos/7"
-  config.vm.provision "shell", path: "provision.sh"  
+  config.vm.provision "shell", path: "provision.sh" 
+  config.vm.hostname = "docker-lab" 
+  config.vm.synced_folder "./arquivos", "/vagrant", type: "rsync"
 
+  #config.vm.network "private_network", ip: "192.168.1.2"
+  #config.vm.synced_folder "./arquivos", "/vagrant", type: "nfs", nfs_version: 4, nfs_udp: false, nfs: {nolock: true}, nfs_export: false
+  #config.vm.synced_folder ".", "/vagrant"
   # config.vm.provider "virtualbox" do |vb|
   #   # Display the VirtualBox GUI when booting the machine
   #   vb.gui = true
@@ -11,5 +16,12 @@ Vagrant.configure("2") do |config|
   #   # Customize the amount of memory on the VM:
   #   vb.memory = "1024"
   # end
+
+  # config.vm.synced_folder "/arquivos", "/vagrant",
+  #   type: "rsync",
+  #   owner: "vagrant",
+  #   group: "vagrant",
+  #   mount_options: ["dmode=777", "fmode=666"],
+  #   create: true  
 
 end
